--- a/css/style.css
+++ b/css/style.css
@@ -8,100 +8,43 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter', sans-serif;
-}
+body{font-family: 'Inter', sans-serif;}
+a:hover{text-decoration: none}
+a:focus{outline: none;outline-offset: 0}
+textarea:hover, input:hover, textarea:active, input:active, textarea:focus, input:focus {outline:0px !important}
+hr.space {background: #fff none repeat scroll 0 0;color: #fff;visibility: hidden}
+hr {background: #e5e7ed none repeat scroll 0 0;border: medium none;clear: both;color: #ddd;float: none;height: 1px;margin: 0 0 1.45em;width: 100%;}
+.hidden-lg{display: none;}
 
-h1 {
-    font-size: 42px;
-    font-weight: 600;
-    color: #45547E;
-}
+h2.title{font-size:40px;font-weight:700;color:#45547E}
+p{font-size:16px;color:#636875}
 
-p {
-    font-size: 16px;
-    color: #636875;
-}
+.session{padding:100px 0}
+.session-inverted{background:#CFE7F0}
+.card,.card-img,.card-img-overlay{border-radius:10px;border:0}
 
-.session {
-    padding: 100px 0;
-}
+.card-img-overlay{display:flex;flex-direction:column;justify-content:flex-end;background:linear-gradient(rgba(99,104,117,0.1),rgba(83,86,94,0.7))}
 
-.session-inverted {
-    background: #CFE7F0;
-}
+.card-img-overlay h2.lg-title,.card-img-overlay .sm-title,.card-img-overlay p{color:#fff}
+.card-img-overlay h2.lg-title,.card-img-overlay .sm-title{text-transform:uppercase;font-weight:bold}
+.card-img-overlay h2.lg-title{font-size:38px}
+.card-img-overlay .sm-title{font-size:20px}
 
-.card, .card-img, .card-img-overlay {
-    border-radius: 10px;
-    border: 0;
-}
+.img-thumbnail{padding:0!important;border:0;border-radius:10px}
+.txt-thumbnail{font-size:17px;font-weight:bold;color:#45547E}
+.alert{padding:30px;border-radius:10px;border:0;background-color:#45547E}
+.alert p,.alert h3{color:#fff}
+.alert h3{font-size:30px;font-weight:bold}
+.alert p{margin-bottom:0}
+.alert .btn-outline-primary{border-color:#fff;color:#fff;font-size:13px;text-transform:uppercase}
+.alert .btn-outline-primary:hover{background:#fff;color:#45547E;transition:.2s}
 
-.card-img-overlay {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-	background: linear-gradient(rgba(99, 104, 117, 0.1),rgba(83, 86, 94, 0.7))
-}
 
-.card-img-overlay h2, .card-img-overlay h4, .card-img-overlay p {
-    color: #fff;
-}
-.card-img-overlay h2, .card-img-overlay h4 {
-    text-transform: uppercase;
-    font-weight: 600;
-}
 
-.card-img-overlay h2 {
-    font-size: 38px;
-}
-
-.card-img-overlay h4 {
-    font-size: 20px;
-}
-
-.img-thumbnail {
-    padding: 0 !important;
-    border: 0;
-    border-radius: 10px;
-}
-
-.txt-thumbnail {
-    font-size: 17px;
-    font-weight: 600;
-    color: #45547E;
-}
-
-.alert {
-    padding: 30px;
-    border-radius: 10px;
-    border: 0;
-    background-color: #45547E;
-}
-
-.alert p, .alert h3 {
-    color: #fff;
-}
-
-.alert h3 {
-    font-size: 30px;
-    font-weight: 600;
-}
-
-.alert p {
-    margin-bottom: 0;
-}
-
-.alert .btn-outline-primary {
-    border-color: #fff;
-    color: #fff;
-    font-size: 13px;
-    text-transform: uppercase;
-}
-
-.alert .btn-outline-primary:hover {
-    background: #fff;
-    color: #45547E;
-    transition: 0.2s;
+@media (max-width: 480px) {
+    .hidden-md{display: block;}
+    .hide-md{display: none;}
+    .card-img-overlay .sm-title{
+        font-size: 16px;
+    }
 }
