--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body{font-family: 'Inter', sans-serif;}
+a{color: #4C6DC8;}
 a:hover{text-decoration: none}
 a:focus{outline: none;outline-offset: 0}
 textarea:hover, input:hover, textarea:active, input:active, textarea:focus, input:focus {outline:0px !important}
 hr.space {background: #fff none repeat scroll 0 0;color: #fff;visibility: hidden}
 hr {background: #e5e7ed none repeat scroll 0 0;border: medium none;clear: both;color: #ddd;float: none;height: 1px;margin: 0 0 1.45em;width: 100%;}
 .hidden-lg{display: none;}
-
-h2.title{font-size:40px;font-weight:700;color:#45547E}
+.title{font-size:40px;font-weight:700;color:#45547E}
 p{font-size:16px;color:#636875}
-
 .session{padding:100px 0}
 .session-inverted{background:#CFE7F0}
 .card,.card-img,.card-img-overlay{border-radius:10px;border:0}
-
 .card-img-overlay{display:flex;flex-direction:column;justify-content:flex-end;background:linear-gradient(rgba(99,104,117,0.1),rgba(83,86,94,0.7))}
-
 .card-img-overlay h2.lg-title,.card-img-overlay .sm-title,.card-img-overlay p{color:#fff}
 .card-img-overlay h2.lg-title,.card-img-overlay .sm-title{text-transform:uppercase;font-weight:bold}
 .card-img-overlay h2.lg-title{font-size:38px}
 .card-img-overlay .sm-title{font-size:20px}
-
 .img-thumbnail{padding:0!important;border:0;border-radius:10px}
 .txt-thumbnail{font-size:17px;font-weight:bold;color:#45547E}
 .alert{padding:30px;border-radius:10px;border:0;background-color:#45547E}
@@ -41,10 +37,15 @@ p{font-size:16px;color:#636875}
 
 
 
+
+
+
+
+
+
 @media (max-width: 480px) {
     .hidden-md{display: block;}
     .hide-md{display: none;}
-    .card-img-overlay .sm-title{
-        font-size: 16px;
-    }
+    .card-img-overlay .sm-title{font-size: 16px;}
+    .card-img-overlay h2.lg-title {font-size: 28px;}
 }
