--- a/css/style.css
+++ b/css/style.css
@@ -62,35 +62,40 @@ p{font-size:16px;color:#636875}
     margin-left: 15px;
     margin-right: 15px;
 }
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background: #45547E;
+}
+.navbar {
+    border-bottom: 1px solid rgba(221, 221, 221, 0.1);
+}
 .navbar-nav .nav-item .nav-link{
     font-size: 12px;
     text-transform: uppercase;
     color: #fff;
+    margin-right: 5px;
+}
+.navbar-nav .nav-item .nav-link:hover{
+    color: #9B9EA5;
 }
 .languages .nav-item {
     margin-right: 5px;
 }
-.carousel-caption {
-    position: absolute;
-    bottom: 45%;
-    left: 30%;
-    z-index: 10;
-    padding: 0;
-    color: #fff;
-    margin-bottom: -100px;
-    text-align: center;
-    width: 700px;
-    margin-left: -350px;
+.carousel-txt {
+	position: absolute;
+	z-index: 10;
+	width: 700px;
+	margin-left: 150px;
+	top: 30%;
 }
-.carousel-caption h2{
+.carousel-txt h2{
     text-transform: uppercase;
     color: #fff;
-    font-size: 70px;
+    font-size: 80px;
 }
-.carousel-caption p {
+.carousel-txt p {
     color: #fff;
 }
-.carousel-caption .btn-primary {
+.carousel-txt .btn-primary {
     font-size: 14px;
     text-transform: uppercase;
     padding: 15px 30px;
@@ -117,7 +122,7 @@ p{font-size:16px;color:#636875}
 .footer .description{color: #8F97AE;font-size: 13px;}
 .footer .title{color: #fff;}
 .text-primary {color: #CFE7F0!important;}
-.fa-facebook:before, .fa-instagram:before, .fa-youtube:before {color: #3A4153;}
+.fa-facebook-f:before, .fa-instagram:before, .fa-youtube:before {color: #3A4153;}
 .whatsapp_float {position: fixed;right: 25px;bottom: 25px;z-index: 9999;}
 .whatsapp_float img{width: 120px;}
 @media (max-width: 480px) {
@@ -125,4 +130,35 @@ p{font-size:16px;color:#636875}
 .hide-md{display: none;}
 .card-img-overlay .sm-title{font-size: 16px;}
 .card-img-overlay h2.lg-title {font-size: 28px;}
+.languages { display: none;}
+}
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (max-width: 900px) { 
+.hidden-md{display: block;}
+.hide-md{display: none;}
+.card-img-overlay .sm-title{font-size: 16px;}
+.card-img-overlay h2.lg-title {font-size: 28px;}
+.languages { display: none;}
+.navbar {padding: 0}
+.navbar .navbar-brand, .navbar .navbar-toggler {margin: 20px;}
+.navbar-collapse {padding: 15px !important;text-align: center; background-color: #45547E;}
+.nav-item.social {margin-top: 15px; margin-bottom: 15px;}
+.carousel-txt {
+	width: 350px;
+	margin-left: 30px;
+	top: 35%;
+}
+.carousel-txt h2{
+    font-size: 30px;
+}
+.carousel-txt p {
+    font-size: 12px;
+}
+.carousel .w-100 {
+    width: auto !important;
+}
+.carousel img {
+    height: 400px;
+}
 }
