--- a/css/style.css
+++ b/css/style.css
@@ -35,73 +35,20 @@ p{font-size:16px;color:#636875}
 .alert .btn-outline-primary:hover{background:#fff;color:#45547E;transition:.2s}
 .text-muted{font-size: 14px;}
 .media img {border-radius: 50px;}
-.client-box {
-	position: relative;
-    padding: 45px 25px;
-    border-radius: 10px;
-    background: #fff;
-}
-.client-box:after {
-	top: 100%;
-	left: 70%;
-	border: solid transparent;
-	content: "";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-	border-color: rgba(255, 255, 255, 0);
-	border-top-color: #ffffff;
-	border-width: 20px;
-	margin-left: -20px;
-}
-.client-box p {
-    font-size: 14px;
-}
-.owl-carousel .item {
-    margin-left: 15px;
-    margin-right: 15px;
-}
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-    background: #45547E;
-}
-.navbar {
-    border-bottom: 1px solid rgba(221, 221, 221, 0.1);
-}
-.navbar-nav .nav-item .nav-link{
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #fff;
-    margin-right: 5px;
-}
-.navbar-nav .nav-item .nav-link:hover{
-    color: #9B9EA5;
-}
-.languages .nav-item {
-    margin-right: 5px;
-}
-.carousel-txt {
-	position: absolute;
-	z-index: 10;
-	width: 700px;
-	margin-left: 150px;
-	top: 30%;
-}
-.carousel-txt h2{
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 80px;
-}
-.carousel-txt p {
-    color: #fff;
-}
-.carousel-txt .btn-primary {
-    font-size: 14px;
-    text-transform: uppercase;
-    padding: 15px 30px;
-    background-color: #4C6DC8;
-    border-color: #4C6DC8;
-}
+.client-box {position: relative;padding: 45px 25px;border-radius: 10px;background: #fff;}
+.client-box:after {top: 100%;left: 70%;border: solid transparent;content: "";height: 0;width: 0;position: absolute;pointer-events: none;border-color: rgba(255, 255, 255, 0);border-top-color: #ffffff;border-width: 20px;margin-left: -20px;}
+.client-box p {font-size: 14px;}
+.owl-carousel .item {margin-left: 15px;margin-right: 15px;}
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {background: #45547E;}
+.navbar {border-bottom: 1px solid rgba(221, 221, 221, 0.1);background-color: #45547E;}
+.navbar-home {background: none;}
+.navbar-nav .nav-item .nav-link{font-size: 12px;text-transform: uppercase;color: #fff;margin-right: 5px;}
+.navbar-nav .nav-item .nav-link:hover{color: #9B9EA5;}
+.languages .nav-item {margin-right: 5px;}
+.carousel-txt {position: absolute;z-index: 10;width: 700px;margin-left: 150px;top: 30%;}
+.carousel-txt h2{text-transform: uppercase;color: #fff;font-size: 80px;}
+.carousel-txt p {color: #fff;}
+.carousel-txt .btn-primary {font-size: 14px;text-transform: uppercase;padding: 15px 30px;background-color: #4C6DC8;border-color: #4C6DC8;}
 .btn-outline-primary{border-color:#fff;color:#fff;font-size:13px;text-transform:uppercase}
 .btn-outline-primary:hover{background:#fff;border-color:#fff;color:#45547E;transition:.2s}
 .btn-primary{border-color:#4C6DC8;color:#fff; background: #4C6DC8; font-size:13px;text-transform:uppercase}
@@ -123,17 +70,9 @@ p{font-size:16px;color:#636875}
 .footer .title{color: #fff;}
 .text-primary {color: #CFE7F0!important;}
 .fa-facebook-f:before, .fa-instagram:before, .fa-youtube:before {color: #3A4153;}
-.whatsapp_float {position: fixed;right: 25px;bottom: 25px;z-index: 9999;}
+.whatsapp_float {position: fixed;right: 5px;bottom: 25px;z-index: 9999;}
 .whatsapp_float img{width: 120px;}
-@media (max-width: 480px) {
-.hidden-md{display: block;}
-.hide-md{display: none;}
-.card-img-overlay .sm-title{font-size: 16px;}
-.card-img-overlay h2.lg-title {font-size: 28px;}
-.languages { display: none;}
-}
 
-/* // Small devices (landscape phones, 576px and up) */
 @media (max-width: 900px) { 
 .hidden-md{display: block;}
 .hide-md{display: none;}
@@ -144,21 +83,9 @@ p{font-size:16px;color:#636875}
 .navbar .navbar-brand, .navbar .navbar-toggler {margin: 20px;}
 .navbar-collapse {padding: 15px !important;text-align: center; background-color: #45547E;}
 .nav-item.social {margin-top: 15px; margin-bottom: 15px;}
-.carousel-txt {
-	width: 350px;
-	margin-left: 30px;
-	top: 35%;
-}
-.carousel-txt h2{
-    font-size: 30px;
-}
-.carousel-txt p {
-    font-size: 12px;
-}
-.carousel .w-100 {
-    width: auto !important;
-}
-.carousel img {
-    height: 400px;
-}
+.carousel-txt {width: 350px;margin-left: 30px;top: 35%;}
+.carousel-txt h2{font-size: 30px;}
+.carousel-txt p {font-size: 12px;}
+.carousel .w-100 {width: auto !important;}
+.carousel img {height: 400px;}
 }
